fix: change to lightweight charts to solve the blurry problem

--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -1,9 +1,3 @@
-.chart-container {
-  width: 250px;
-  height: 170px;
-  background: #000;
-}
-
 /* CSS styles */
 .stock-container {
   width: 260px; /* Adjust the width as needed */
@@ -14,7 +8,7 @@
 }
 
 .stock-name {
-  font-size: 14px;
+  font-size: 16px;
   color: #fff;
   font-weight: bold; /* Make the stock name bold */
   margin-bottom: 2px; /* Spacing between the stock name and the info */
@@ -27,19 +21,17 @@
 
 .stock-price,
 .stock-change {
-  font-size: 12px;
+  font-size: 14px;
   flex-basis: 33%; /* Each column takes up roughly one third of the space */
   text-align: left; /* Center the text within each column */
   box-sizing: border-box; /* Include padding in the width */
-  color: #f92855;
 }
 
-.stock-volume {
-  font-size: 12px;
+.stock-percent {
+  font-size: 14px;
   flex-basis: 33%; /* Each column takes up roughly one third of the space */
   text-align: right; /* Center the text within each column */
   box-sizing: border-box; /* Include padding in the width */
-  color: #f92855;
 }
 
 /* Optional: Add some responsiveness to the layout */
